# sakura-rs

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  config.toml  mq_config.toml  mysql_config.toml  redis_config.toml  解决 Rust 项目中的依赖版本冲突问题.MD
a-flash/: Cargo.toml  (+1 more)
actix-code/: Cargo.toml
actix-code/src/: main.rs
api/: Cargo.toml  app_config.toml  config.toml
api/src/: lib.rs  main.rs
api/src/controllers/: app_data_extractor.rs  mod.rs  test_controller.rs  user_controller.rs
api/src/service/: mod.rs
api/src/service/user/: user_main_service.rs
api/tests/: test_builder_macro.rs
axum-code/: Cargo.toml
axum-code/src/: config.rs  error.rs  logging.rs  main.rs  server.rs
axum-code/src/api/: auth.rs  mod.rs  products.rs  users.rs
axum-code/src/infrastructure/: mod.rs
axum-code/src/middleware/: auth.rs  mod.rs
axum-code/src/utils/: mod.rs  pagination.rs
core/: Cargo.toml
core/src/: aes_des_utils.rs  lib.rs  response.rs  utils.rs
crates/app-enumeta/: Cargo.toml
crates/app-enumeta/src/: app_macro.rs  lib.rs
crates/app-enumeta/tests/: app_macro_tests.rs  app_tests.rs
crates/common/: Cargo.toml
crates/common/src/: aes_cbc_utils.rs  aes_des_utils.rs  lib.rs  sha1_utils.rs  status_code.rs
crates/database/: Cargo.toml
crates/database/src/: error.rs  lib.rs  mysql.rs  pool_manager.rs  transaction.rs
crates/database/test/: transaction_example.rs
crates/logs/: Cargo.toml
crates/logs/src/: lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: builder.rs  lib.rs  service.rs
crates/middleware/: Cargo.toml
crates/middleware/src/: lib.rs  request_context.rs  request_extractor.rs  request_logger_v1.rs
crates/mq/: Cargo.toml
crates/mq/src/: connection.rs  consumer.rs  error.rs  lib.rs  mq_config.rs  producer.rs
crates/rconfig/: Cargo.toml  default.toml
crates/rconfig/examples/: usage.rs
crates/rconfig/src/: app_config.rs  builder.rs  config.rs  error.rs  extension.rs  lib.rs  validation.rs
crates/rdatabase/: Cargo.toml
crates/rdatabase/src/: error.rs  lib.rs  macros.rs  pool.rs  query.rs
crates/redis/: Cargo.toml
crates/redis/src/: lib.rs  redis_helper.rs  redis_locker.rs  redis_manager.rs
crates/rlog/: Cargo.toml
crates/rlog/examples/: default.toml  log.rs
crates/rlog/src/: builder.rs  config.rs  lib.rs  macros.rs
crates/tools/: Cargo.toml
crates/tools/src/: image_downloader.rs  image_downloader_1.rs  lib.rs  main.rs  url.text
database/: Cargo.toml
database/src/: db_config.rs  db_helper.rs  lib.rs  pool_manager.rs
huajian/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
huajian/config/: application-dev.toml  application-prod.toml  application-test.toml
huajian/src/: app_state.rs  error.rs  lib.rs  main.rs
huajian/src/constants/: enums.rs
huajian/src/middleware/: auth.rs  decrypted.rs  logging.rs  mod.rs
huajian/src/modules/: mod.rs
huajian/src/utils/: jwt.rs
middleware/: Cargo.toml
middleware/src/: request_context.rs  request_extractor.rs
mq/: Cargo.toml
mq/src/: connection.rs  consumer.rs  error.rs  lib.rs  mq_config.rs
nginx-restart-api/: Cargo.toml
nginx-restart-api/src/: main.rs
payment-gateway/: .env  Cargo.toml  Dockerfile  docker-compose.yml
payment-gateway/docs/: architecture.md  deployment.md
payment-gateway/migrations/: 20250416000000_init.sql
payment-gateway/src/: app_state.rs  lib.rs  main.rs  server.rs
payment-gateway/src/adapters/: mod.rs
payment-gateway/src/api/: routes.rs
payment-gateway/src/config/: app_config.rs
payment-gateway/src/domain/: mod.rs  models.rs
payment-gateway/src/infrastructure/: cache.rs  database.rs  logging.rs  messaging.rs  mod.rs
payment-gateway/src/interfaces/: mod.rs
payment-gateway/src/repositories/: order_repo.rs
payment-gateway/src/services/: mod.rs
payment-gateway/src/utils/: crypto.rs  error.rs  http_client.rs  mod.rs
payment-service/: Cargo.toml
payment-service/src/: db.rs  error.rs  lib.rs  main.rs
payment-service/src/config/: cache.rs  settings.rs
payment-service/src/domain/: events.rs  mod.rs  money.rs  payment.rs
payment-service/src/handlers/: mod.rs
payment-service/src/models/: enums.rs  mod.rs  payment.rs
payment-service/src/payment/: factory.rs  mod.rs  strategy.rs
payment-service/src/repository/: mod.rs  payment_repository.rs
payment-service/src/services/: mod.rs  payment_service.rs
payment-service/tests/: integration_tests.rs  mod.rs
redis/: Cargo.toml
redis/src/: client.rs  config.rs  lib.rs  redis_config.rs  redis_helper.rs
sakura-api/: Cargo.toml  config.toml
sakura-api/src/: lib.rs  main.rs  response.rs
sakura-api/src/controllers/: mod.rs  test_controller.rs
sakura-api/src/enums/: database.rs
sakura-api/tests/: test_builder_macro.rs
sakura-cli/: Cargo.toml
sakura-cli/src/: config.rs  main.rs  service.rs
service/: Cargo.toml
service/src/: database_manager.rs  database_manager_bk.rs  lib.rs
service/src/user/: mod.rs  user_main_service.rs
ssl-automator/: Cargo.toml  Dockerfile  README.MD  docker-compose.yml
ssl-automator/scripts/: entrypoint.sh
ssl-automator/src/: main.rs
yice-api/: Cargo.toml  config.toml
yice-api/config/: application.toml
yice-api/src/: app.rs  config.rs  error.rs  lib.rs  main.rs  server.rs
yice-api/src/api/: home.rs  landing_pages.rs  mod.rs  pay_manage_handler.rs  recharges.rs
yice-api/src/constants/: defaults.rs  enums.rs  limits.rs  mod.rs  settings.rs
yice-api/src/controller/: home_controller.rs  mod.rs
yice-api/src/domain/: mod.rs
yice-api/src/dto/: base_request.rs  base_request_fields.rs  extract.rs  mod.rs  request_dto.rs  response.rs  userinfo_dto.rs
yice-api/src/errors/: business.rs  error.rs  mod.rs  response.rs
yice-api/src/infrastructure/: mod.rs
yice-api/src/middleware/: decrypt_middleware.rs  decryptor.rs  extract.rs  log_errors.rs  logger.rs  mod.rs  request_logger.rs
yice-api/src/params/: extract.rs  mod.rs  request_dto.rs
yice-api/src/status/: http.rs  mod.rs
yice-api/src/utils/: constants.rs  datetime.rs  enums.rs  mod.rs  type_convert.rs
yice-api/tests/: app_macro_tests.rs
(+137 files in other folders)
