[workspace]
resolver = "2"
members = [
    "crates/*",
    "actix-code",
    "sakura-api",
    "yice-api",
    "nginx-restart-api", "payment-gateway",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
actix-web = "4.10"
actix-http = "3.10"

futures = "0.3"
futures-util = "0.3"

rayon = "1.10"

axum = "0.8"
axum-extra = "0"
hyper = "1.6"
tower = "0.5"
tower-http = "0.6"
sqlx = { version = "0.8" }
sea-query = "0.32"
sea-query-binder = "0.7"
tokio = { version = "1.44" }
tokio-util = { version = "0.7"}

redis = {version = "0.29"}
bb8 = "0.9"
bb8-redis = "0.21"
bb8-lapin = "0.6.0"
lapin = "2.5"
deadpool-lapin = "0.12"
async-trait = "0.1"

toml = "0.8"
yaml-rust = "0.4"
clap = "4.5"
strum = "0.27"
strum_macros = "0.27"

lazy_static = {version = "1.5"}
once_cell = { version = "1" }
inventory = {version = "0.3"}

chrono = { version = "0.4" }
time = "0.3"

serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"

dotenvy = "0.15"
listenfd = "1.0"

base64 = "0.22.1"
sha1 = "0"
hmac = "0"


rand = "0.9.0-beta.3"

thiserror = "2.0"
anyhow = "1"

config = "0.15"

tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
tracing-log = "0.2"

opentelemetry = {version = "0.29"}
opentelemetry-otlp = {version = "0.29"}
tracing-opentelemetry = {version = "0.30"}

log = "0.4"
env_logger = "0.11"

# 模板
handlebars = "4.5"

uuid = { version = "1.0" }
url = "2.5"
regex = "1.11"
validator = "0.20"

reqwest = "0.12"

# Rust 中的 宏（macro）开发生态系统的核心组件，主要用于 自定义派生宏（procedural macro） 和 代码生成
syn = { version = "2.0", features = ["full"] }  # 解析 Rust 源代码为抽象语法树（AST）用于读取和解析宏的输入代码
quote = "1.0"                                   # 动态生成 Rust 代码, 用于生成宏的输出代码
proc-macro2 = "1.0"                             # 提供 TokenStream，支持过程宏的开发, 底层基础设施，支持跨平台 Token 流操作
darling = "0.20"                                # 简化属性解析, 用于解析自定义宏属性

# 开发测试 临时文件
tempfile = "3"
mockall = "0.13"
rstest = "0.25"
tokio-test = "0.4"

