[package]
name = "sakura-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = {workspace = true}

serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}

tracing = {workspace = true}
tracing-subscriber = {workspace = true, features = ["chrono"]}




middleware = { path = "../middleware" }
sakura-core = {path = "../core"}
#sakura-redis = {path = "../redis"}
