[package]
name = "sakura-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = {workspace = true}
tokio = {workspace = true, features = ["full"]}

serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}

sqlx = {workspace = true, features = ["runtime-tokio", "mysql", "chrono"]}
chrono = {workspace = true}


tracing = {workspace = true}
tracing-subscriber = {workspace = true, features = ["chrono"]}

middleware = {path = "../middleware" }
sakura-macros = {path = "../macros" }
sakura-core = {path = "../core"}

#sakura-redis = {path = "../redis"}
sakura-database={path="../database"}
