[package]
name = "axum-code"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# 使用自定义的包依赖管理器
#rust-dependency-manager = { git = "https://github.com/zifeiyu613/creates-manager", branch = "main" }

# Web 框架
axum = {workspace = true}
tower = {workspace = true}
tower-http = {workspace = true, features = ["cors", "trace", "timeout"] }
hyper = {workspace = true}
tokio = {workspace = true, features = ["full"] }

# 序列化/反序列化
serde = {workspace = true, features = ["derive"] }
serde_json = {workspace = true}

# 数据库
sqlx = {workspace = true, features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid", "json", "migrate"] }
redis = {workspace = true, features = ["tokio-comp"] }

# 消息队列
lapin = {workspace = true}  # RabbitMQ 客户端

# 认证
jsonwebtoken = {version = "9.3"}
argon2 = {version = "0.5"}
rand = {workspace = true}

# 日志和监控
tracing = {workspace = true}
tracing-subscriber = {workspace = true, features = ["env-filter", "json"] }
opentelemetry = {workspace = true}
opentelemetry-otlp = {workspace = true}
tracing-opentelemetry = {workspace = true}

# 配置
config = {workspace = true}
dotenvy = {workspace = true}

# 错误处理
thiserror = {workspace = true}
anyhow = {workspace = true}

# 工具
chrono = {workspace = true, features = ["serde"] }
uuid = {workspace = true, features = ["v4", "serde"] }
async-trait = {workspace = true}
validator = {workspace = true, features = ["derive"] }

# 微服务相关 (为未来准备)
tonic = {version = "0.13"}  # gRPC 框架

#[build-dependencies]
#rust-dependency-manager = { git = "https://github.com/yourusername/rust-dependency-manager", branch = "main" }
