[package]
name = "sakura-core"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = {workspace = true}

serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}

cipher = { workspace = true, features = ["block-padding", "alloc"] }
aes = {workspace = true}
des = {workspace = true}
base64 = {workspace = true}

cbc = {workspace = true}
block-padding = {workspace = true}

thiserror = {workspace = true}

tracing = {workspace = true}
tracing-subscriber = {workspace = true}
rand = {workspace = true}


