[package]
name = "sakura-database"
version = "0.1.0"
edition = "2021"

[dependencies]

sqlx = {workspace = true, features = ["runtime-tokio", "mysql", "chrono"]}
tokio = {workspace = true, features = ["full"]}
toml = {workspace = true}
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
strum = {workspace = true}
strum_macros = {workspace = true}

chrono = {workspace = true}

once_cell = { workspace = true }

tracing = {workspace = true}
tracing-subscriber = {workspace = true, features = ["chrono"]}
