[package]
name = "sakura-mq"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {workspace = true, features = ["full"]}
lapin = {workspace = true}
deadpool-lapin = {workspace = true}
async-trait = {workspace = true}
futures = {workspace = true}
toml = {workspace = true}

serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}

once_cell = {workspace = true}

thiserror = {workspace = true}
