[package]
name = "nginx-restart-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
axum = {workspace = true}
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["trace"] }
tracing = {workspace = true}
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde = { workspace = true, features = ["derive"] }
serde_json = {workspace = true}
dotenvy = {workspace = true}
anyhow = {workspace = true}
uuid = {workspace = true}