[package]
name = "payment-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Web框架
axum = {workspace = true}
tower = {workspace = true}
tower-http = { workspace = true, features = ["trace"] }
hyper = { version = "1.2", features = ["full"] }
tokio = { version = "1.36", features = ["full"] }

# 序列化/反序列化
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
time = { workspace = true, features = ["serde"] }

# 数据库
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "mysql", "time", "uuid", "json"] }
redis = { workspace = true, features = ["tokio-comp", "connection-manager"] }

# 消息队列
lapin = {workspace = true}  # RabbitMQ客户端

# 日志和监控
tracing = {workspace = true}
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing-appender = { workspace = true }

# 配置
config = { workspace = true }
dotenvy = {workspace = true}

# 错误处理
thiserror = {workspace = true}
anyhow = {workspace = true}

# 异步和并发
async-trait = {workspace = true}
futures = {workspace = true}
tokio-util = {workspace = true}

# 工具
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
chrono = { workspace = true, features = ["serde"] }
rust_decimal = { version = "1.34", features = ["serde"] }
rust_decimal_macros = "1.34"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
rand = {workspace = true}
openssl = "0.10.72"
serde_urlencoded = "0.7.1"
futures-lite = "2.6.0"
regex = "1.11.1"
generic-array = "1.2.0"
hex = "0.4.3"


# 测试
[dev-dependencies]
mockall = {workspace = true}
rstest = {workspace = true}
tokio-test = {workspace = true}

[lib]
name = "payment_gateway"
path = "src/lib.rs"

[[bin]]
name = "payment-gateway"
path = "src/main.rs"