[package]
name = "payment-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
axum = { workspace = true, features = ["macros"] }
tower = {workspace = true}
hyper = {workspace = true}
tokio = { workspace = true, features = ["full"] }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "mysql", "chrono"] }
serde = { workspace = true, features = ["derive"] }
serde_json = {workspace = true}
chrono = { workspace = true, features = ["serde"] }
tower-http = { workspace = true, features = ["cors"] }
thiserror = {workspace = true}
async-trait = {workspace = true}
anyhow = {workspace = true}
reqwest = { workspace = true, features = ["json"] }
uuid = { workspace = true, features = ["serde", "v4"] }
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
once_cell = {workspace = true}
strum = { workspace = true, features = ["derive"] }
strum_macros = {workspace = true}

mockall = {workspace = true}
urlencoding = {workspace = true}

[dev-dependencies]
tokio-test = {workspace = true}
httpmock =  {workspace = true}
rstest =  {workspace = true}
rand =  {workspace = true}