[package]
name = "sakura-redis"
version = "0.1.0"
edition = "2021"

[dependencies]

redis = {workspace = true, features = ["r2d2"]}
r2d2 = {workspace = true}
toml = {workspace = true}
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}

tracing = {workspace = true}
once_cell = { workspace = true }

tempfile = "3.6"
