[package]
name = "sakura-api"
version = {workspace = true}
edition = {workspace = true}

[dependencies]
actix-web = {workspace = true}
tokio = {workspace = true, features = ["full"]}

serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}

sqlx = {workspace = true, features = ["runtime-tokio", "mysql", "chrono"]}
chrono = {workspace = true}

clap = {workspace = true}

# Log
tracing = {workspace = true}
tracing-subscriber = {workspace = true, features = ["chrono", "json"] }

common = {path = "../crates/common"}
rconfig = {path = "../crates/rconfig" }
database = {path = "../crates/database"}
mq = {path = "../crates/mq"}
redis = {path = "../crates/redis"}
middleware = {path = "../crates/middleware"}
sakura-macros = {path = "../crates/macros"}
rlog = {path = "../crates/rlog" }


