[package]
name = "sakura-cli"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = {workspace = true}
clap = {workspace = true, features = ["derive"]}

serde = {workspace = true, features = ["derive"]}
config = {workspace = true}

env_logger = {workspace = true}
anyhow = {workspace = true}
log = {workspace = true}

reqwest = {workspace = true, features = ["blocking"]}

[dev-dependencies]
tempfile = {workspace = true}