[package]
name = "app-enumeta"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
sqlx = { workspace = true , features = ["mysql"], optional = true }

serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}

[features]
db = ["sqlx"]


