[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
actix-web = {workspace = true}

serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}

cipher = { workspace = true, features = ["block-padding", "alloc"] }
aes = {workspace = true}
des = {workspace = true}
base64 = {workspace = true}

cbc = {workspace = true}
block-padding = {workspace = true}

thiserror = {workspace = true}