[package]
name = "database"
version.workspace = true
edition.workspace = true

[dependencies]
sqlx = {workspace = true, features = ["runtime-tokio", "mysql", "chrono"]}
tokio = {workspace = true, features = ["full"]}

strum = {workspace = true}
strum_macros = {workspace = true}

chrono = {workspace = true}

once_cell = { workspace = true }

async-trait = {workspace = true}

uuid = {workspace = true, features = ["v4"]}
thiserror = {workspace = true}

rconfig = {path = "../rconfig" }