[package]
name = "logs"
version.workspace = true
edition.workspace = true

[dependencies]
serde = {workspace = true, features = ["derive"]}

tracing = {workspace = true}
tracing-subscriber = {workspace = true, features = ["chrono", "json"] }
tracing-appender = {workspace = true}


toml = {workspace = true}

rconfig = {path = "../rconfig" }