[package]
name = "mq"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = {workspace = true, features = ["full"]}
lapin = {workspace = true}
deadpool-lapin = {workspace = true}

async-trait = {workspace = true}
futures = {workspace = true}

serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}

once_cell = {workspace = true}

thiserror = {workspace = true}

rconfig = {path = "../rconfig" }