[package]
name = "rconfig"
version.workspace = true
edition.workspace = true

[dependencies]

config = { workspace = true}
serde = { workspace = true, features = ["derive"]}

serde_json = { workspace = true }

toml = {workspace = true}

yaml-rust = {workspace = true}

clap = { workspace = true, features = ["derive"] }
dotenvy = {workspace = true}
thiserror = {workspace = true}
tracing = {workspace = true}
async-trait = {workspace = true}
regex = {workspace = true}


