[package]
name = "rconfig"
version.workspace = true
edition.workspace = true

[dependencies]

config = { workspace = true}
serde = { workspace = true, features = ["derive"]}

serde_json = { workspace = true }

clap = { workspace = true, features = ["derive"] }
dotenvy = {workspace = true}
thiserror = {workspace = true}
tracing = {workspace = true, features = ["log"]}
async-trait = {workspace = true}
regex = {workspace = true}
url = {workspace = true}
num_cpus = "1.16.0"


