[package]
name = "rconfig"
version.workspace = true
edition.workspace = true

[dependencies]

config = { workspace = true }
serde = { workspace = true, features = ["derive"] }

serde_json = { workspace = true }

dotenvy = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["log"] }

url = { workspace = true }

num_cpus = "1.16.0"


