[package]
name = "tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
reqwest = { workspace = true, features = ["json", "blocking"] }
tokio = { workspace = true, features = ["full"] }
futures = {workspace = true}

serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}

url = {workspace = true}
uuid = { workspace = true, features = ["v4"] }
id3 = {workspace = true}
base64 = {workspace = true}

rayon = {workspace = true}

thiserror = { workspace = true }

scraper = "0.23.1"
indicatif = "0.17"
sanitize-filename = "0.6.0"

common = {path = "../common"}


